sliders added, bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 node_modules
 *.pem
+public/javascripts/jquery-ui.min.js
+public/javascripts/jquery.min.js
+public/stylesheets/jquery-ui.css
+public/stylesheets/ui.theme.css
