--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
+    "name": "SWITCH API"
+  , "version": "0.1.2"
   , "private": true
   , "dependencies": {
-      "express": "2.5.5"
+      "express": "3.x"
     , "jade": ">= 0.0.1"
+    , "socket.io": "0.9.x"
   }
 }
