--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "SWITCH API"
   , "version": "0.1.2"
   , "private": true
+  , "main": "app.coffee"
   , "dependencies": {
-      "express": "3.x"
+  		"coffee-script" : "*"
+    , "express": "3.x"
     , "jade": ">= 0.0.1"
     , "socket.io": "0.9.x"
   }
